--- a/templates/journal_works.html
+++ b/templates/journal_works.html
@@ -18,7 +18,7 @@
                 <tbody>
                     <tr>
                       <th>{{item.job}}</th>
-                      <td>{{item.team_user.surname}} {{item.team_user.name}}</td>
+                      <td>{{item.user.score}} {{item.user.name}}</td>
                       <td>{{item.work_size}}</td>
                       <td>{{item.collaborators}}</td>
                       <td>
