--- a/templates/register.html
+++ b/templates/register.html
@@ -11,9 +11,9 @@
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
         <p>
-            {{ form.login.label }}<br>
-            {{ form.login }}<br>
-            {% for error in form.login.errors %}
+            {{ form.email.label }}<br>
+            {{ form.email }}<br>
+            {% for error in form.email.errors %}
                 <div class="alert alert-danger" role="alert">
                     {{ error }}
                 </div>
@@ -32,15 +32,6 @@
             {{ form.confirm.label }}<br>
             {{ form.confirm }}<br>
             {% for error in form.confirm.errors %}
-                <div class="alert alert-danger" role="alert">
-                    {{ error }}
-                </div>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.surname.label }}<br>
-            {{ form.surname }}<br>
-            {% for error in form.surname.errors %}
                 <div class="alert alert-danger" role="alert">
                     {{ error }}
                 </div>
