--- a/templates/about.html
+++ b/templates/about.html
@@ -38,7 +38,7 @@
   <a href="cookie">Печенье</a>
   <a href="about">О нас</a>
     {% if current_user.is_authenticated %}
-    <a style="float:right;" class="navbar-brand" href="/profile">{{ current_user.name }}</a>
+    <a style="float:right;" class="navbar-brand" href="/logout">{{ current_user.name }}</a>
     <a style="float:right;" class="btn btn-danger" href="/logout">Выйти</a>
         {% else %}
     <p>
@@ -64,24 +64,7 @@
 <body>
 <header>
 
-<<h4 style="text-align: center;">Печенье с предсказанием из США &mdash; кондитерское изделие в виде печенья специфичной формы, изготовленное из теста.</h4>
-        <p style="text-align: center;"><img src="static/data/cookies1.jpg" style="text-align: left;"><img src="static/data/cookies2.png"></p>
-<<h4 style="text-align: center;">Фирменное изделие многих ресторанов в США, представляющее собой, как правило, ванильные печеньица, в каждое из которых запечена бумажка с мудрыми изречениями, афоризмами или пророчествами.</h4>
-    <<h5 style="text-align: center;">Почему бы и вам не попробовать "похрустеть" собственной судьбой?</h5>
-    <p style="text-align: center;"><input type="submit"
-       value="Приступим"
-       style="font-size : 20px; width: 200px; height: 50px; text-align: center;"
-       class="open_button"
-       onClick='location.href="cookie"'
 
-
-
-
-    />
-    </p>
-<!-- Begin page content -->
-<main role="main" class="container">
-    {% block content %}{% endblock %}
 </main>
 </body>
 </html>
